# primrose

./: Cargo.toml  rustfmt.toml
demo/: Cargo.toml
demo/src/: main.rs
engine/: Cargo.toml
engine/assets/shaders/: shader.wgsl
engine/src/: clock.rs  lib.rs  window.rs
engine/src/jade/: camera.rs  mod.rs  scene.rs
engine/src/jade/audio/: mod.rs
engine/src/jade/ecs/: component.rs  mod.rs  object.rs  transform.rs
engine/src/jade/ecs/components/: basic_controller.rs  mod.rs
engine/src/jade/ecs/components/camera/: camera_lock.rs
engine/src/jade/input/: key.rs  mod.rs  mouse.rs
engine/src/renderer/: batch.rs  bufferpool.rs  camera_uniform.rs  mesh.rs  mod.rs  texture.rs  vertex.rs
engine/src/util/: color.rs  mod.rs
engine/src/util/assets/: assetpool.rs  mod.rs
engine/src/util/settings/: window.rs
primrose/: Cargo.toml
primrose/src/: main.rs
