[workspace]
resolver = "2"
members = [
    "engine",
    "primrose"
]

[workspace.lints.rust]
unfulfilled_lint_expectations = "deny"

[workspace.lints.clippy]
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
similar_names = "allow"
cognitive_complexity = "warn"
infinite_loop = "warn"
integer_division = "warn"
absolute_paths = "deny"
alloc_instead_of_core = "deny"
allow_attributes = "deny"
as_pointer_underscore = "deny"
as_underscore = "deny"
big_endian_bytes = "deny"
create_dir = "deny"
dbg_macro = "deny"
disallowed_script_idents = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exit = "deny"
expect_used = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
get_unwrap = "deny"
host_endian_bytes = "deny"
if_then_some_else_none = "deny"
impl_trait_in_params = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
lossy_float_literal = "deny"
map_with_unused_argument_over_ranges = "deny"
mem_forget = "deny"
min_ident_chars = "deny"
missing_assert_message = "deny"
mixed_read_write_in_expression = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
mutex_integer = "deny"
needless_raw_strings = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pathbuf_init_then_push = "deny"
pattern_type_mismatch = "deny"
precedence_bits = "deny"
pub_use = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_test_prefix = "deny"
redundant_type_annotations = "deny"
renamed_function_params = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
semicolon_outside_block = "deny"
str_to_string = "deny"
suspicious_xor_used_as_pow = "deny"
try_err = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
unused_trait_names = "deny"
unwrap_used = "deny"
verbose_file_reads = "deny"
